tests/miniJava/pos/001308_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( true ) java = 0 ; } }
