tests/miniJava/neg/003051_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = void true ; } }
